<resources>
    <string name="app_name">Крестики-нолики</string>
    <string name="preferences_name">Настройки</string>

    <string name="droids_name">Android</string>
    <string name="players1_name">Player 1</string>
    <string name="players2_name">Player 2</string>


    <string name="level_easy">Легко</string>
    <string name="level_normal">Нормально</string>
    <string name="level_hard">Сложно</string>
    <string name="level_header">Сложность игры</string>


    <string name="statusGamesReady">ready</string>
    <string name="statusGamesPlay">play</string>
    <string name="statusGamesFinish">finish</string>


    <string name="pref_level_title">Выбрать сложность</string>
    <string name="pref_checkbox_title">Запомнить настройки</string>
    <string name="pref_checkbox_summary">Запомнить настройки и использовать в следующей игре</string>
    <string name="about_text">
        Крестики-нолики v1.0 \n
        ©2018 by Алексей Черкасов
    </string>
    <string name="about_title">О программе</string>

    <string-array name="levels_array">
        <item>Легко</item>
        <item>Нормально</item>
        <item>Сложно</item>
    </string-array>
    <string-array name="levels_array_values">
        <item>Легко</item>
        <item>Нормально</item>
        <item>Сложно</item>
    </string-array>

    <string name="pref_players_title">Настройки игроков</string>
    <string-array name="players_settings">
        <item>Создать игрока</item>
        <item>Изменить игрока</item>
        <item>Удалить игрока</item>
    </string-array>
    <string-array name="players_settings_values">
        <item>Создать игрока</item>
        <item>Изменить игрока</item>
        <item>Удалить игрока</item>
    </string-array>
    <string name="title_activity_high_score">Таблица рекордов</string>
    <string name="title_activity_create_player">Создать игрока</string>
    <string name="title_activity_edit_player">Изменить игрока</string>
    <string name="playerIsAlreadyExist">Игрок с таким именем уже существует</string>
    <string name="doNotChooseEqualsPlayer">Нельзя выбрать одного игрока</string>
    <string name="setDefaultPlayers">установлены начальные игроки</string>
    <string name="doNotDelDefaultPlayerPart1">Стандартного игрока</string>
    <string name="doNotDelDefaultPlayerPart2">удалять нельзя</string>
    <string name="settings">Настройки</string>
    <string name="high_score">Таблица рекордов</string>
    <string name="about">О программе</string>
    <string name="exit">Выход</string>
    <string name="inputName">Введите имя</string>
    <string name="name">Name</string>
    <string name="setPlayerForGame">Выбрать игрока для игры</string>
    <string name="setToLeft">Установить левым</string>
    <string name="setToRight">Установить правым</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>


</resources>
