<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/level_header">
        <ListPreference
            android:entries="@array/levels_array"
            android:entryValues="@array/levels_array_values"
            android:key="pref_level"
            android:summary=""
            android:title="@string/pref_level_title">

        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_players"
        android:title="@string/pref_players_title">


        <Preference
            android:id="@+id/prefActivityCreatePlayer"
            android:key="pref_create_players"

            android:onClick="onclick"

            android:title="@string/title_activity_create_player"

            >


        </Preference>

    </PreferenceCategory>

    <Preference
        android:key="pref_edit_players"

        android:title="@string/title_activity_edit_player">

        <intent android:action="intent.action.edit.player"></intent>

    </Preference>

</PreferenceScreen>